@@ -236,6 +236,12 @@ Gets the process number of the running this program. The same as the Perl L<$$|h
 
 Returns a L<Sys::IO::Stat|SPVM::Sys::IO::Stat> object giving the status info for a file. The same as the Perl L<stat|https://perldoc.perl.org/functions/stat> function.
 
+=head2 fstat
+
+  static method fstat : Sys::IO::Stat ($fd : int);
+
+Returns a L<Sys::IO::Stat|SPVM::Sys::IO::Stat> object giving the status info for a file descriptor. The same as the Perl L<stat|https://perldoc.perl.org/functions/stat> function.
+
 =head2 chdir
 
   static method chdir : int ($path : string);
@@ -542,6 +548,12 @@ Calls the L</"print"> method after creating formatted string given $stream and $
   static method read : int ($stream : Sys::IO::FileStream, $buf : mutable string, $count : int, $buf_offset : int = 0);
 
 Calls the L<fread|SPVM::Sys::IO/"fread"> method in the L<Sys::IO|SPVM::Sys::IO> class.
+
+=head2 rewinddir
+
+  static method rewinddir : void ($dirp : Sys::IO::DirStream);
+
+Calls the L<rewinddir|SPVM::Sys::IO/"rewinddir"> method in the L<Sys::IO|SPVM::Sys::IO> class.
 
 =head1 Modules
 
