@@ -15,6 +15,7 @@
       + static method print : int ($stream : Sys::IO::FileStream, $string : string);
       + static method printf : int ($stream, $format : string, $args : object[]);
       + static method read : int ($stream : Sys::IO::FileStream, $buf : mutable string, $count : int, $buf_offset : int = 0);
+      + static method rewinddir : void ($dirp : Sys::IO::DirStream);
       
 0.486 2023-09-06
   [Bug Fix]
